--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Japanese poetry'
 - !lcc 'PL'
+- GITenberg
 title: 殉情詩集
 url: http://www.gutenberg.org/ebooks/38697
